--- a/styles/sass/blocks/_moderation.scss
+++ b/styles/sass/blocks/_moderation.scss
@@ -8,16 +8,7 @@
     align-items: center;
     box-sizing: border-box;
     padding: 18px 0;
-    
-
-    &:hover {
-      background-color: rgba(156, 203, 255, 0.15);
-      color: $middle-dark-color-default;
-      
-    }
   }
-
-  
 }
 
 
@@ -25,16 +16,45 @@
   @extend %text-circe-18;
   width: 100%;
   display: grid;
-  grid-template-columns: 2fr 2fr 5fr 1fr 2fr;
+  grid-template-columns: 2fr 2fr 5fr 1fr 2fr 1fr;
+  column-gap: 8px;
+
+  @media screen and (max-width: 800px) {
+    grid-template-columns: 2fr 2fr 5fr
+  }
+
+  @media screen and (max-width: 550px) {
+    grid-template-columns: 1fr;
+    row-gap: 16px;
+  }
 
   
   li {
     text-align: left;
+    word-break: break-word;
     &:nth-last-of-type(2){
       text-align: center;
     }
     &:nth-last-of-type(1){
       text-align: right;
+    }
+
+    @media screen and (max-width: 800px) {
+      &:nth-last-of-type(1){
+        display: none;
+      }
+      &:nth-last-of-type(2){
+        display: none;
+      }
+    }
+
+    @media screen and (max-width: 550px) {
+      &:nth-last-of-type(1){
+        display: flex;
+      }
+      &:nth-last-of-type(2){
+        display: flex;
+      }
     }
   }
 
@@ -42,75 +62,26 @@
     color: $middle-dark-color-default;
     min-height: 44px;
     align-items: center;
+
+    @media screen and (max-width: 550px) {
+      display: none;
+    }
   }
 
-  .moderation__table-idea-name {
-    display: flex;
-    flex-direction: row;
-    column-gap: 8px;
-  
-  }
 
-  .moderation__table-idea-status {
+  .moderation__buttons {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    width: 19px;
-    height: 19px;
-    min-width: 19px;
-    min-height: 19px;
-    border-radius: 50%;
-    background-color: $light-color-default;
-    border: 1px solid $primary-color-onclick;
-    margin-top: 2px;
+    row-gap: 4px;
 
-   span {
-    background-color: transparent;
-   }
-
-   &.approved {
-    background-color: $succes-color-default;
-    border: 1px solid $succes-color-default;
-   
-    span {
-      width: 10px;
-      height: 5px;
-      background-color:transparent;
-      transform: rotate(-45deg) translate(1px, -1px);
-      border-color: transparent transparent #fff #fff;
-      border-width: 1px;
-      border-style: solid;
-
-  
-      &:last-of-type {
-        display: none;
-      }
-     }
-   }
-
-  &.declined {
-    background-color: $danger-color-default;
-    position: relative;
-    border: 1px solid $danger-color-default;
-    
-
-    span {
-      width: 10px;
-      height: 1px;
-      border-color: transparent transparent #fff transparent;
-      border-width: 1px;
-      border-style: solid;
-
-      &:first-of-type {
-        transform: rotate(45deg) translate(1px, 0px);
-      }
-      &:last-of-type {
-        transform: rotate(-45deg) translate(1px, -1px);
-      }
+    .moderation__button {
+      @extend %button; 
+      background-color: transparent;
+      padding: 0;
+      min-height: auto;
+      width: 24px;
+      height: 24px; 
     }
-  } 
- 
-  
   }
 }
