--- a/styles/sass/blocks/_profile.scss
+++ b/styles/sass/blocks/_profile.scss
@@ -28,10 +28,22 @@
     display: flex;
     flex-direction: row;
     column-gap: 16px;
+
+    @media screen and (max-width: 500px) {
+      flex-direction: column;
+      align-items: flex-end;
+      row-gap: 8px;
+    }
   }
 
   .profile__link {
     @extend %gray-link;
+  }
+
+  @media screen and (max-width: 650px) {
+    flex-direction: column;
+    align-items: flex-end;
+    row-gap: 8px;
   }
 
 }
