--- a/styles/sass/blocks/_tabs.scss
+++ b/styles/sass/blocks/_tabs.scss
@@ -20,10 +20,16 @@
   justify-content: space-between;
   margin: 0 auto 40px;
   width: 100%;
+  column-gap: 24px;
 
   .tabs__link {
     @extend %text-circe-18;
     @extend %blue-link;
+    flex-shrink: 0;
+  }
+
+  @media screen and (max-width: 550px) {
+    margin: 0 auto 24px;
   }
 }
 
@@ -36,28 +42,37 @@
   padding: 0;
   list-style: none;
 
-  @media screen and (max-width: 650px) {
+  background-color: $light-color-default;
+  box-sizing: border-box;
+  padding: 10px;
+  border-radius: 4px;
+
+
+
+  @media screen and (max-width: 550px) {
     flex-direction: column;
     row-gap: 16px;
-    margin-bottom: 32px;
+    margin-bottom: 0;
   }
 }
-
 
 .tabs__nav-btn {
   border: none;
   background-color: transparent;
   outline: none;
-  color: $dark-color-default;
+  box-sizing: border-box;
+  padding: 4px 10px;
+  
+  color: $middle-dark-color-default;
   @extend %text-circe-18;
   @extend %silly-link;
+  @extend %transition;
 
-  padding: 0;
   text-decoration: none;    
   overflow-anchor: none;
 
   &:hover {
-    color: $primary-color-default;
+    color: $middle-dark-color-onclick;
   }
 
   &:active {
@@ -75,7 +90,9 @@
   }
 
   &.tabs__nav-btn_active {
-    color: $primary-color-onclick;
+    color: $primary-color-default;
+    border-radius: 4px;
+    background: #fff;
   }
   
 }
