--- a/styles/sass/utils/_samples.scss
+++ b/styles/sass/utils/_samples.scss
@@ -81,6 +81,11 @@
   @extend %text-circe;
   font-size: 18px;
   line-height: 24px;
+
+  @media screen and (max-width: $tablet) {
+    font-size: 15px;
+    line-height: 18px;
+  }
 }
 
 %text-circe-16 {
